--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,10 @@
             </div>
         </div>
     </div>
-    <div style="display:none" class="tab-item">Page 3</div>
+    <div style="display:none" class="tab-item">
+        <ul class="teachers-list">
+        </ul>
+    </div>
     <div style="display:none" class="tab-item">
         <div class="profile">
             <img src="http://wx.qlogo.cn/mmopen/vi_32/cg0yk4ZMVAxMUqPyqecm705oibkb40Vm6hGxt3MqAl4epic4rM4bvdLAVibWiaGkUbBcziaRlVSTphhtZ5qmDmpZFqA/0">
