--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,4 +271,24 @@ li {
   color: red;
 }
 
-/* search */
+/* teachers */
+.teachers-list {
+  margin-top: 8px;
+}
+
+.teachers-list .item {
+  padding: 4px;
+  display: flex;
+  margin-bottom: 8px;
+  background: #ffffff;
+}
+.teachers-list .item img {
+  width: 80px;
+  height: 80px;
+  padding: 16px;
+}
+.teachers-list .item info {
+  margin-left: 8px;
+  display: flex;
+  flex-direction: column;
+}
